--- a/src/css/modals/modals.scss
+++ b/src/css/modals/modals.scss
@@ -1,7 +1,7 @@
 @import "../pui-variables";
 @import '../mixins';
-@import '../bootstrap/mixins';
-@import '../bootstrap/modals';
+//@import '../bootstrap/mixins';
+//@import '../bootstrap/modals';
 
 .modal {
   box-shadow: $box-shadow-key-3, $box-shadow-amb-3;
